# near-mixer

./: .mixer_config  .mixer_secret.txt  Cargo.toml  README.md
scripts/: mixer.sh
src/: lib.rs
tests/: test_basics.rs
